# Lyris

./: README.md  com.github.akamrzero.Lyris.json  com.github.akamrzero.lyris.json  meson.build  python3-requirements.json  requirements.txt  todo.md
data/: com.github.akamrzero.Lyris.desktop.in  lyris.gresource.xml  (+9 more)
src/: audioplayer.py  lyris.in  main.py  meson.build  mpris.py  queue.py  window.py
src/models/: __init__.py  album.py  artist.py  base_model.py  db.py  playlist.py  playlist_song.py  queue_info.py  song.py
src/utils/: audio_metadata.py  db_manager.py  event_bus.py  get_cached_cover.py  get_dominant_color.py  get_playlist_data.py  gsettings.py  index_folder.py  media_indexer.py  mediastore.py  music_loader.py  process_specrum_data.py  pygobject_helpers.py  time_converter.py
src/widgets/: album_art.py  album_detail_page.py  albums_page.py  app_state.py  artist_detail_page.py  artists_page.py  blur_background.py  home_page.py  main_content.py  main_menu.py  marquee_label.py  music_visualizer.py  navigation_tab_bar.py  now_playing_panel.py  playing_eq_icon.py  playlist_detail_page.py  playlists_page.py  preferences_dialog.py  search_page.py  seek_bar.py  small_song_preview.py  song_info_overlay.py  songs_page.py  split_view.py  test.py  track_row.py  view_stack.py
src/widgets/entitys/: entity_detail_page.py  entity_item_row.py  entity_item_view.py  entity_page.py  entity_paintable.py
src/widgets/paintables/: blur_paintable.py
src/widgets/views/: __init__.py  album_view.py  artist_view.py  playlists_view.py  song_view.py  universal_item_view.py
(+13 files in other folders)
